--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
         <title>Blog of Alikhan Abzhanov</title>
+        <meta name="viewport" content="width-device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400, 400i, 500, 500i, 700, 700i, 900, 900i">
+        <link rel="stylesheet" href="reset.css">
+        <link rel="stylesheet" href="debug.css">
+        <style>
+
+        </style>
     </head>
     <body>
-        <h1>Hello World</h1>
-        <p>I'm hosted with GitHub Pages.</p>
+        <article>
+            <p>ARTICLE</p>
+        </article>
     </body>
 </html>
